--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     gtag('js', new Date());
     gtag('config', 'G-HLV8X0NDBV');
   </script>
+
+  <!-- Hotjar Tracking Code for Site 5052166 (name missing) -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 5052166, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
 </head>
 
 <body>
